# nvidia-smi-mpl

./: .gitignore  README.md  nohup.out  pyproject.toml  setup_bash_completion.sh
.bash_completion/: README.md  nvidia-smi-mpl.bash-completion
nvidia_smi_mpl/: main.py  server.py
